# WebApp-in-Rust

./: Cargo.toml  Rocket.toml
UML/: SQLDiagram.puml  UsecaseDiagram.puml
front/static/: style.css
front/templates/: base.html.tera  donations.html.tera  donations_add.html.tera  donations_edit.html.tera  games.html.tera  games_add.html.tera  games_edit.html.tera  index.html.tera  investments.html.tera  investments_add.html.tera  investments_edit.html.tera  investors.html.tera  investors_add.html.tera  investors_edit.html.tera  jobs.html.tera  jobs_add.html.tera  jobs_edit.html.tera  publishers.html.tera  publishers_add.html.tera  publishers_edit.html.tera  staff.html.tera  staff_add.html.tera  staff_edit.html.tera  users.html.tera  users_add.html.tera  users_edit.html.tera
migrations/2022-04-09-161526_gamestudio_init/: down.sql  up.sql
migrations/2022-04-09-161531_gamestudio_fill/: down.sql  up.sql
sql/: GameStudioFILL.sql  GameStudioINIT.sql  query.sql
src/: errors.rs  main.rs  models.rs  requests_handler.rs  schema.rs  sql_connector.rs  sql_server.rs
src/controllers/: donations_controller.rs  games_controller.rs  investments_controller.rs  investors_controller.rs  jobs_controller.rs  mod.rs  publishers_controller.rs  staff_controller.rs  users_controller.rs
templates/: base.html.tera  index.html.tera
