[package]
name = "web_app"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.0"
thiserror = "1.0.30"
diesel = {version = "1.4.8", features = ["postgres", "chrono"]}
dotenv = "0.15.0"
rocket = "0.5.0-rc.1"

rocket_dyn_templates = {version = "0.1.0-rc.1", features = ["tera"]}

serde = "1.0.136"
chrono = "0.4.19"

# [dependencies.rocket_contrib]
# version = "0.4.10"
# default-features = false
# features = ["diesel_postgres_pool"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
features = ["diesel_postgres_pool"]

# [dependencies.rocket_db_pools]
# git = "https://github.com/SergioBenitez/Rocket"
# version = "0.1.0-rc"
# features = ["sqlx_postgres"]